--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "1.5.0",
     "@tailwindcss/line-clamp": "^0.2.0",
-    "firebase": "^8.6.1",
+    "firebase": "^9.22.0",
     "firebase-admin": "^9.8.0",
     "next": "latest",
+    "next-auth": "^4.22.1",
     "react": "17.0.1",
     "react-currency-format": "^1.1.0",
+    "react-currency-formatter": "^1.1.0",
     "react-dom": "17.0.1",
     "react-redux": "7.2.2",
     "react-responsive-carousel": "^3.2.23"
